<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize">

        <ImageView
            android:id="@+id/leftdifficulty"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/goback"
            android:src="@drawable/backcartoon" />

        <TextView
            android:id="@+id/textviewdifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/CHOOSEDIFFICULTY"
            android:textColor="#ffffff"
            android:textSize="27sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/easyper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:text="@string/easy"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mediumper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/medium"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/hardper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hard"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <sarveshchavan777.inrerface2.HolderActivities.SlidingTabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>