<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/transparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/freehinttext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:text="@string/free_hint"
            android:textColor="@color/white"
            android:textSize="30sp" />



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <info.hoang8f.widget.FButton
                android:id="@+id/cancel"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:textColor="@color/white"
                android:text="@string/cancel"
                app:buttonColor="@color/cancelred" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/transparent2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <TextView
        android:textSize="27sp"
        android:gravity="center"
        android:id="@+id/reavel11"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/absolutlyfree"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:textSize="19sp"
        android:gravity="center"
        android:id="@+id/reavel1"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fillsomerandomeanswer"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">


        <info.hoang8f.widget.FButton
            android:id="@+id/ok"
            android:text="@string/ok"
            android:textSize="18sp"
           app:buttonColor="@color/white"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </info.hoang8f.widget.FButton>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
</LinearLayout>