<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#ffffff"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/image"
                android:src="@drawable/heart2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/progress1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Progress"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenhundred"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.beardedhen.androidbootstrap.BootstrapProgressBar
                android:id="@+id/Progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bootstrapBrand="danger"
                app:bootstrapMaxProgress="40"
                app:bootstrapProgress="40"
                app:roundedCorners="true"
                app:striped="true" />
        </LinearLayout>

    </LinearLayout>


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />
</LinearLayout>